--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
