--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
-    "start:prod:linux": "cross-env NODE_ENV=production UPLOAD_DIR=/var/lib/simasetmu node dist/main",
+    "start:prod:linux": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "jest --watch",
