--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -11,6 +10,24 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:13
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+          POSTGRES_DB: test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      NODE_ENV: test
+
     steps:
       - name: ⬇️ Checkout code
         uses: actions/checkout@v3
@@ -18,11 +35,14 @@ jobs:
       - name: 🟢 Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20 # or your project's Node.js version
+          node-version: 20
           cache: 'npm'
 
       - name: 📦 Install dependencies
         run: npm ci
+
+      - name: 📝 Create .env.test file
+        run: echo "${{ secrets.ENV_TEST }}" > .env.test
 
       - name: 🔎 Run unit tests
         run: npm run test
