--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,3 +65,6 @@ jobs:
 
       - name: 🏗️ Build app
         run: npm run build
+
+      - name: 📜 Run migrations
+        run: npm run typeorm -- migration:run
