--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./data-source.ts",
-    "migration:generate": "NODE_ENV=development npm run typeorm -- migration:generate",
-    "migration:run:dev": "NODE_ENV=development npm run typeorm -- migration:run",
-    "migration:run:prod": "NODE_ENV=production npm run typeorm -- migration:run",
-    "migration:revert:dev": "NODE_ENV=development npm run typeorm -- migration:revert",
-    "migration:revert:prod": "NODE_ENV=production npm run typeorm -- migration:revert",
+    "migration:generate": "cross-env NODE_ENV=development npm run typeorm -- migration:generate",
+    "migration:run:dev": "cross-env NODE_ENV=development npm run typeorm -- migration:run",
+    "migration:run:prod": "cross-env NODE_ENV=production npm run typeorm -- migration:run",
+    "migration:revert:dev": "cross-env NODE_ENV=development npm run typeorm -- migration:revert",
+    "migration:revert:prod": "cross-env NODE_ENV=production npm run typeorm -- migration:revert",
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
