--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,9 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
+      - name: 📜 Log installed packages
+        run: npm list --depth=0
+
       - name: 🔎 Run unit tests
         run: npm run test
 
