--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,9 @@ jobs:
       - name: 📜 Log installed packages
         run: npm list
 
+      - name: Create Migration
+        run: npm run typeorm migration:create -- src/migrations/InitDB
+
       - name: 🛠️ Generate migration
         run: npm run typeorm migration:generate -- src/migrations/InitDB
 
