--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     # ports:
     #   - '5432:5432'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_prod:/var/lib/postgresql/data
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -d -U $$POSTGRES_USER']
       interval: 10s
@@ -31,4 +31,4 @@ services:
       retries: 5
 
 volumes:
-  postgres_data:
+  postgres_data_prod:
