--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     container_name: simastemu-db
     env_file:
       - .env.production
-    # ports:
-    #   - '5432:5432'
+    ports:
+      - '5432:5432'
     volumes:
       - postgres_data_prod:/var/lib/postgresql/data
     healthcheck:
